@@ -6,7 +6,7 @@ target_type = "gui"
 src = {
     "about.c", "i18n.c", "job.c", "main.c", "map.c", "menu.c", "prb.c",
     "progress.c", "reports.c", "settings.c", "shutdown.c", "statbar.c",
-    "toolbar.c", "upgrade.c", "vollist.c"
+    "taskbar.c", "toolbar.c", "upgrade.c", "vollist.c"
     
 }
 rc = { "ultradefrag.rc" }
